# mcquack_vector

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
benchmark/: CMakeLists.txt  benchmark_main.cpp  construct.hpp  emplace_back.hpp  utils.hpp
cmake/: benchmark.cmake  flags.cmake  gtest.cmake  options.cmake
examples/: CMakeLists.txt  emplace_back.cpp
include/mcquack_vector/: vector.hpp
test/: AssignmentTests.cpp  BackTests.cpp  CMakeLists.txt  CMakeLists.txt~  CtorTests.cpp  DataTests.cpp  EmplaceBackTests.cpp  FrontTests.cpp  GeneralTests.cpp  IteratorTests.cpp  MakeVectorTests.cpp  PopBackTests.cpp  PushBackTests.cpp  SwapTests.cpp
